Migrating from AGON

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -128,6 +128,76 @@ pipelines:
       - datasets/MD_BOM_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_WRKF_STEP_1:
+                name: PPLN_MES_MD_WRKF_STEP_1_mec_meb
+                description: Mapping pipeline  ['mec', 'meb']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_WRKF_STEP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_WRKF_STEP_2:
+                name: PPLN_MES_MD_WRKF_STEP_2_cmw_mvc_mdy_mei_mer
+                description: Mapping pipeline  ['cmw', 'mvc', 'mdy', 'mei', 'mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_WRKF_STEP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_WRKF_STEP_3:
+                name: PPLN_MES_MD_WRKF_STEP_3_mej_mes
+                description: Mapping pipeline  ['mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_WRKF_STEP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_WRKF_STEP_4:
+                name: PPLN_MES_MD_WRKF_STEP_4_mem_mmt
+                description: Mapping pipeline  ['mem', 'mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_WRKF_STEP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_WRKF_STEP_5:
+                name: PPLN_MES_MD_WRKF_STEP_5_mns
+                description: Mapping pipeline  ['mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_WRKF_STEP
+                dependencies: {}
+ 
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
