JEKT-296 ❇️ New     - Pipeline        - DART_L1_Purchase_Order_MD_PO_HIST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -813,6 +813,20 @@ pipelines:
       - datasets/MD_PO_SCHED_LINE_DELV
     subgraphs: []
     dependencies: {}
+  pipelines/DART_L1_Purchase_Order_MD_PO_HIST:
+    name: DART_L1_Purchase_Order_MD_PO_HIST
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-05 12:54:52'
+    modifiedAt: '2023-04-05 12:54:55'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
     name: STRCT_MD_HU_SER
