❇️ New     - Job        - JOB_MES_MD_WRKF_STEP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3664,6 +3664,32 @@ jobs:
     createdAt: '2023-04-04 15:45:43'
     modifiedAt: '2023-04-04 18:50:01'
     author: smille29@its.jnj.com
+  jobs/JOB_MES_MD_WRKF_STEP:
+    name: JOB_MES_MD_WRKF_STEP
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 * * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/PPLN_MES_MD_WRKF_STEP_1
+    - pipelines/PPLN_MES_MD_WRKF_STEP_3
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-05 13:25:09'
+    modifiedAt: '2023-04-05 13:26:42'
+    author: skostadi@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
