--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7070,6 +7070,31 @@ jobs:
     createdAt: '2023-03-22 13:05:15'
     modifiedAt: '2023-03-22 13:06:35'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_MATL_INV_HM2:
+    name: JOB_MD_MATL_INV_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_MATL_INV
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-05 13:09:51'
+    modifiedAt: '2023-04-05 13:16:25'
+    author: ypatel8@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
