JEKT-402 Target GEM created 🔁 Modified     - Pipeline        - MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI     - Dataset        - MD_MATL_ALT_UOM

--- a/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
@@ -30,8 +30,15 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STD_UOM_CD
-    type: string
+  - name: LCL_FACT_NUMRTR_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LCL_FACT_DENOM_MEAS
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -44,15 +51,78 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
-    nullable: false
+  - name: FACT_DENOM_MEAS
+    type: decimal(18,4)
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
-    type: timestamp
+  - name: GTIN_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GTIN_CAT_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WDTH_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DIM_UOM_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GRS_WT_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WT_UOM_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LGTH_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HGHT_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VOL_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GTIN_NUM_HRMZD
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -72,15 +142,15 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
+  - name: DAI_UPT_DTTM
     type: timestamp
     nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_
-    type: string
+  - name: _l0_upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
