--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -89,12 +89,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 11:55:35'
-    modifiedAt: '2023-04-05 13:38:19'
+    modifiedAt: '2023-04-05 13:43:18'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARM
       - datasets/DS_SAP_MARA_01
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_ALT_UOM
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1228,7 +1229,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-05 10:52:38'
+    modifiedAt: '2023-04-05 13:43:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
