JEKT-176 (Created Pipeline for SAP P01) ❇️ New     - Pipeline        - SAP_MD_MATL_INV_P01

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -798,6 +798,20 @@ pipelines:
       - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_INV_P01:
+    name: SAP_MD_MATL_INV_P01
+    description: ''
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-05 13:20:43'
+    modifiedAt: '2023-04-05 13:24:46'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
