--- a/src/datasets/MD_PO_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_PO_SCHED_LINE_DELV/pbt_aspects.yml
@@ -25,13 +25,13 @@ schema:
       tags: []
   - name: DELV_SCHED_CNT_NBR
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_DTTM
-    type: void
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -72,23 +72,30 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CMT_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: ORDER_TYPE
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORDER_CO
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORDER_SUF
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -108,14 +115,14 @@ schema:
       mappings: []
       tags: []
   - name: CAT_OF_DELV_DT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BTCH_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -129,7 +136,7 @@ schema:
       mappings: []
       tags: []
   - name: DAI_CRT_DTTM
-    type: date
+    type: timestamp
     nullable: false
     metadata:
       description: ''
@@ -137,41 +144,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: '_pk_   '
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _pk_md_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
