--- a/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
@@ -142,13 +142,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _l0_upt_
     type: timestamp
     nullable: true
@@ -164,6 +157,13 @@ schema:
       mappings: []
       tags: []
   - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DAI_UPDT_DTTM
     type: timestamp
     nullable: false
     metadata:
