JEKT-314 ❇️ New target dataset     - Dataset        - MD_DELV_LINE
🔁 Modified
    - Pipeline
       - SAP_MD_DELV_LINE_BBA_BBL_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,7 +20,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-03 18:08:25'
-    modifiedAt: '2023-04-05 14:03:29'
+    modifiedAt: '2023-04-05 14:16:32'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VBUP
@@ -92,6 +92,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-04 17:09:45'
         modifiedAt: '2023-04-04 17:09:45'
+  datasets/MD_DELV_LINE:
+    name: MD_DELV_LINE
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 14:16:29'
+    modifiedAt: '2023-04-05 14:16:29'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 14:16:29'
+        modifiedAt: '2023-04-05 14:16:29'
 templates: {}
 jobs: {}
 functions:
