JEKT-314 ❇️ New pipeline for BWI_TAI     - Pipeline        - SAP_MD_DELV_LINE_BWI_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -31,6 +31,25 @@ pipelines:
       - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_DELV_LINE_BWI_TAI:
+    name: SAP_MD_DELV_LINE_BWI_TAI
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-05 14:54:55'
+    modifiedAt: '2023-04-05 14:55:36'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_VBUP
+      - datasets/DS_SAP_02_LIKP
+      - datasets/DS_SAP_02_LIPS
+      - datasets/DS_SAP_02_VBAK
+      outputs:
+      - datasets/MD_DELV_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/DS_SAP_02_LIPS:
     name: DS_SAP_02_LIPS
