--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -203,6 +203,48 @@ pipelines:
       - datasets/MES_MD_WRKF_STEP
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_TASK_ITM_1:
+                name: PPLN_MES_MD_TASK_ITM_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_TASK_ITM
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_TASK_ITM_2:
+                name: PPLN_MES_MD_TASK_ITM_2_cmw_mdy_mei_mer_mej_mes
+                description: Mapping pipeline  ['cmw', 'mdy', 'mei', 'mer', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_TASK_ITM
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_TASK_ITM_3:
+                name: PPLN_MES_MD_TASK_ITM_3_meb_mem_mmt_mns
+                description: Mapping pipeline  ['meb', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_TASK_ITM
+                dependencies: {}
+ 
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
