JEKT-186 🔁 Modified     - Job        - JOB_MD_MATL_LOC     - Pipeline        - JDE_MD_MATL_LOC_BW2        - SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN
❌ Deleted
    - Pipeline
       - JDE_01_MD_MATL_LOC
       - SAP_MD_MATL_LOC_BBA_BBL_BBN_old
       - SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_old

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -694,54 +694,6 @@ pipelines:
       - datasets/STRCT_MES_MD_PROD_RVSN_BASE
     subgraphs: []
     dependencies: {}
-  pipelines/SAP_01_MD_MATL_LOC:
-    name: SAP_MD_MATL_LOC_BBA_BBL_BBN_old
-    description: Pipeline to bba_bbl_bbn SAP systems for MD_MATL_LOC
-    author: ggrilo1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-17 17:58:14'
-    modifiedAt: '2023-03-30 09:56:23'
-    datasets:
-      inputs:
-      - datasets/DS_SAP_01_MARC
-      outputs:
-      - datasets/MD_MATL_LOC
-    subgraphs: []
-    dependencies: {}
-  pipelines/JDE_01_MD_MATL_LOC:
-    name: JDE_01_MD_MATL_LOC
-    description: Pipeline to all SAP systems for MD_MATL_LOC
-    author: ggrilo1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-22 10:40:57'
-    modifiedAt: '2023-03-22 15:15:26'
-    datasets:
-      inputs:
-      - datasets/DS_JDE_MD_MATL_LOC
-      outputs:
-      - datasets/MD_MATL_LOC_SWAP
-    subgraphs: []
-    dependencies: {}
-  pipelines/SAP_01_MD_MATL_LOC_tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn:
-    name: SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_old
-    description: Pipeline to tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn systems  for MD_MATL_LOC
-    author: ggrilo1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-23 14:49:45'
-    modifiedAt: '2023-03-30 09:14:47'
-    datasets:
-      inputs:
-      - datasets/DS_SAP_01_MARC
-      outputs:
-      - datasets/MD_MATL_LOC
-    subgraphs: []
-    dependencies: {}
   pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02:
     name: SAP_MD_MATL_LOC_BBA_BBL_BBN
     description: Pipeline to bba bbl bbn SAP systems for MD_MATL_LOC
@@ -766,7 +718,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-23 17:09:44'
-    modifiedAt: '2023-04-04 10:41:04'
+    modifiedAt: '2023-04-05 15:51:26'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARC
@@ -834,7 +786,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-24 11:33:25'
-    modifiedAt: '2023-04-04 09:41:22'
+    modifiedAt: '2023-04-05 14:59:21'
     datasets:
       inputs:
       - datasets/DS_JDE_MD_MATL_LOC
@@ -6259,11 +6211,11 @@ jobs:
   jobs/JOB_MD_MATL_LOC:
     name: JOB_MD_MATL_LOC
     description: ''
-    fabricUID: 4
+    fabricUID: 32
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: small
+    jobSize: Prophecy_Small
     scheduleCron: 0 0 0 1/1 * ? *
     timeout: null
     alerting:
@@ -6287,9 +6239,9 @@ jobs:
       clusterMode:
         Single: {}
       clusterId: null
-    enabled: null
+    enabled: false
     createdAt: '2023-04-03 10:09:49'
-    modifiedAt: '2023-04-03 10:29:12'
+    modifiedAt: '2023-04-05 15:24:32'
     author: ggrilo1@its.jnj.com
 functions:
   author: null
