--- a/src/datasets/MD_PO_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_PO_SCHED_LINE_DELV/pbt_aspects.yml
@@ -142,21 +142,21 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt
+  - name: _l0_upt_
     type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: '_pk_   '
+  - name: _pk_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_md_
+  - name: _pk_md5_
     type: string
     nullable: true
     metadata:
