JEKT-314 ❇️ Created new source Datasets, changed pipeline config settings     - Dataset        - DS_SAP_02_VBUP        - DS_SAP_03_LIKP        - DS_SAP_03_LIPS        - DS_SAP_03_VBAK
🔁 Modified
    - Pipeline
       - SAP_MD_DELV_LINE_BWI_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -39,13 +39,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 14:54:55'
-    modifiedAt: '2023-04-05 14:55:36'
+    modifiedAt: '2023-04-05 17:33:03'
     datasets:
       inputs:
-      - datasets/DS_SAP_01_VBUP
-      - datasets/DS_SAP_02_LIKP
-      - datasets/DS_SAP_02_LIPS
-      - datasets/DS_SAP_02_VBAK
+      - datasets/DS_SAP_02_VBUP
+      - datasets/DS_SAP_03_LIKP
+      - datasets/DS_SAP_03_LIPS
+      - datasets/DS_SAP_03_VBAK
       outputs:
       - datasets/MD_DELV_LINE
     subgraphs: []
@@ -126,6 +126,66 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-05 14:16:29'
         modifiedAt: '2023-04-05 14:16:29'
+  datasets/DS_SAP_03_LIPS:
+    name: DS_SAP_03_LIPS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 17:22:08'
+    modifiedAt: '2023-04-05 17:32:12'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 17:22:08'
+        modifiedAt: '2023-04-05 17:22:08'
+  datasets/DS_SAP_03_LIKP:
+    name: DS_SAP_03_LIKP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 17:23:37'
+    modifiedAt: '2023-04-05 17:32:28'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 17:23:37'
+        modifiedAt: '2023-04-05 17:23:37'
+  datasets/DS_SAP_03_VBAK:
+    name: DS_SAP_03_VBAK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 17:24:48'
+    modifiedAt: '2023-04-05 17:32:45'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 17:24:48'
+        modifiedAt: '2023-04-05 17:24:48'
+  datasets/DS_SAP_02_VBUP:
+    name: DS_SAP_02_VBUP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 17:26:08'
+    modifiedAt: '2023-04-05 17:33:03'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 17:26:08'
+        modifiedAt: '2023-04-05 17:26:08'
 templates: {}
 jobs: {}
 functions:
