JEKT-314 ❇️ New pipeline for FSN_GEU_HCS_MRS_P01_SVS_ATL     - Pipeline        - SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -50,6 +50,20 @@ pipelines:
       - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL:
+    name: SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-05 17:45:47'
+    modifiedAt: '2023-04-05 17:46:02'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/DS_SAP_02_LIPS:
     name: DS_SAP_02_LIPS
