JEKT-314 🔁 pasted pipeline from BWI_TAI as template.     - Pipeline        - SAP_MD_DELV_LINE_BWI_TAI        - SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -39,7 +39,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 14:54:55'
-    modifiedAt: '2023-04-05 17:36:18'
+    modifiedAt: '2023-04-05 18:00:17'
     datasets:
       inputs:
       - datasets/DS_SAP_02_VBUP
@@ -58,10 +58,15 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 17:45:47'
-    modifiedAt: '2023-04-05 17:46:02'
+    modifiedAt: '2023-04-05 18:01:53'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_02_VBUP
+      - datasets/DS_SAP_03_LIKP
+      - datasets/DS_SAP_03_LIPS
+      - datasets/DS_SAP_03_VBAK
+      outputs:
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets:
