--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -391,15 +391,16 @@ pipelines:
     description: Mapping pipeline  ['mvc']
     author: skostadi@its.jnj.com
     mode: batch
+    artefactID: ''
     language: python
     createdAt: '2023-03-21 17:29:57'
-    modifiedAt: '2023-03-21 17:51:22'
+    modifiedAt: '2023-04-05 18:04:25'
     datasets:
       inputs: []
       outputs:
-            - datasets/MES_MD_RWRK_RSN
+      - datasets/MES_MD_RWRK_RSN
+    subgraphs: []
     dependencies: {}
-    
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2866,7 +2867,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-05 18:04:25'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
