--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -58,14 +58,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 17:45:47'
-    modifiedAt: '2023-04-05 18:15:40'
+    modifiedAt: '2023-04-05 18:26:53'
     datasets:
       inputs:
       - datasets/DS_SAP_02_TVM4T
-      - datasets/DS_SAP_02_VBUP
-      - datasets/DS_SAP_03_LIKP
-      - datasets/DS_SAP_03_LIPS
-      - datasets/DS_SAP_03_VBAK
+      - datasets/DS_SAP_03_VBUP
+      - datasets/DS_SAP_04_LIKP
+      - datasets/DS_SAP_04_LIPS
+      - datasets/DS_SAP_04_VBAK
       outputs:
       - datasets/MD_DELV_LINE
     subgraphs: []
@@ -211,7 +211,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-05 18:08:02'
-    modifiedAt: '2023-04-05 18:08:03'
+    modifiedAt: '2023-04-05 18:26:53'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -221,6 +221,66 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-05 18:08:02'
         modifiedAt: '2023-04-05 18:08:02'
+  datasets/DS_SAP_03_VBUP:
+    name: DS_SAP_03_VBUP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 18:18:20'
+    modifiedAt: '2023-04-05 18:26:37'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 18:18:20'
+        modifiedAt: '2023-04-05 18:18:20'
+  datasets/DS_SAP_04_VBAK:
+    name: DS_SAP_04_VBAK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 18:19:12'
+    modifiedAt: '2023-04-05 18:26:24'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 18:19:12'
+        modifiedAt: '2023-04-05 18:19:12'
+  datasets/DS_SAP_04_LIKP:
+    name: DS_SAP_04_LIKP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 18:20:25'
+    modifiedAt: '2023-04-05 18:26:08'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 18:20:25'
+        modifiedAt: '2023-04-05 18:20:25'
+  datasets/DS_SAP_04_LIPS:
+    name: DS_SAP_04_LIPS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-05 18:21:53'
+    modifiedAt: '2023-04-05 18:25:59'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-05 18:21:53'
+        modifiedAt: '2023-04-05 18:21:53'
 templates: {}
 jobs: {}
 functions:
