--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,118 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_CNTNR_1:
+                name: PPLN_MES_MD_CNTNR_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_2:
+                name: PPLN_MES_MD_CNTNR_2_cmw_mdy
+                description: Mapping pipeline  ['cmw', 'mdy']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_3:
+                name: PPLN_MES_MD_CNTNR_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_4:
+                name: PPLN_MES_MD_CNTNR_4_meb
+                description: Mapping pipeline  ['meb']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_5:
+                name: PPLN_MES_MD_CNTNR_5_mei_mej_mes
+                description: Mapping pipeline  ['mei', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_6:
+                name: PPLN_MES_MD_CNTNR_6_mer
+                description: Mapping pipeline  ['mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_7:
+                name: PPLN_MES_MD_CNTNR_7_mem_mmt
+                description: Mapping pipeline  ['mem', 'mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_CNTNR_8:
+                name: PPLN_MES_MD_CNTNR_8_mns
+                description: Mapping pipeline  ['mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR
+                dependencies: {}
+   
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
