--- a/src/datasets/MD_DELV_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_DELV_LINE/pbt_aspects.yml
@@ -443,6 +443,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_4_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DSTR_CHNL_CD
     type: string
     nullable: true
