--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,20 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_CNTNR_ASSN_HIST_CHI_1:
+                name: PPLN_MES_MD_CNTNR_ASSN_HIST_CHI_1_mec_mes_meb_mdy
+                description: Mapping pipeline  ['mec', 'mes', 'meb', 'mdy']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_CNTNR_ASSN_HIST_CHI
+                dependencies: {}
+            
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
