JEKT-314 ❇️ New pipeline for MBP     - Pipeline        - SAP_MD_DELV_LINE_MBP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -70,6 +70,20 @@ pipelines:
       - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_DELV_LINE_MBP:
+    name: SAP_MD_DELV_LINE_MBP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-05 18:45:30'
+    modifiedAt: '2023-04-05 18:45:42'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/DS_SAP_02_LIPS:
     name: DS_SAP_02_LIPS
