🔁 JEKT-226     - Dataset        - DS_SAP_03_VBRK        - MD_BILL_DOC_HDR        - DS_SAP_01_TVFKT        - DS_SAP_01_TVKOT     - Pipeline        - SAP_01_MD_BILL_DOC_HDR_BBA_BBN        - SAP_01_MD_BILL_DOC_HDR_BBL        - SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI

--- a/src/datasets/DS_SAP_03_VBRK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_03_VBRK/pbt_aspects.yml
@@ -695,21 +695,112 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZAUTH_SIG
+  - name: VTREF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZACVDIRECT
+  - name: FK_SOURCE_SYS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZBSTZD
+  - name: FKTYP_CRM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STGRD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DPC_REL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MNDID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PAY_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SEPON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MNDVG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPPAYM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPPORD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: Y9VANNEE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: Y9VNOCYCLE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: Y9AUART
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KVGR1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KVGR5
     type: string
     nullable: true
     metadata:
