remove branches.txt

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,48 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_COLL_DATA_HIST_1:
+                name: PPLN_MES_MD_COLL_DATA_HIST_1_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_COLL_DATA_HIST
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_COLL_DATA_HIST_2:
+                name: PPLN_MES_MD_COLL_DATA_HIST_2_mej
+                description: Mapping pipeline  ['mej']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_COLL_DATA_HIST
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_COLL_DATA_HIST_3:
+                name: PPLN_MES_MD_COLL_DATA_HIST_3_mem
+                description: Mapping pipeline  ['mem']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_COLL_DATA_HIST
+                dependencies: {}
+   
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
