--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,48 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_DATA_CLCT_DEF_1:
+                name: PPLN_MES_MD_DATA_CLCT_DEF_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_CLCT_DEF
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_CLCT_DEF_2:
+                name: PPLN_MES_MD_DATA_CLCT_DEF_2_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_CLCT_DEF
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_CLCT_DEF_3:
+                name: PPLN_MES_MD_DATA_CLCT_DEF_3_mes_mej_mem
+                description: Mapping pipeline  ['mes', 'mej', 'mem']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_CLCT_DEF
+                dependencies: {}
+  
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
