JEKT-246 ❌ Deleted     - Dataset        - DS_MD_SUP_PRCHSNG_ORG
🔁 Modified
    - Pipeline
       - JDE_01_F0401_DEU_JES_JEM_JET_JSW_SJD_DJD_MTR_MBP
    - Dataset
       - MD_SUP_PRCHSNG_ORG

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -13,14 +13,14 @@ buildSystemDetails:
   modifiedAt: '2023-03-24 14:53:47'
 pipelines:
   pipelines/JDE_01_DEU_F0401:
-    name: JDE_01_DEU_F0401
+    name: JDE_01_F0401_DEU_JES_JEM_JET_JSW_SJD_DJD_MTR_MBP
     description: ''
     author: lsorarra@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-21 17:01:44'
-    modifiedAt: '2023-04-05 14:24:58'
+    modifiedAt: '2023-04-05 19:03:47'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
@@ -60,27 +60,12 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-03-21 17:43:17'
         modifiedAt: '2023-03-21 17:43:17'
-  datasets/DS_MD_SUP_PRCHSNG_ORG:
-    name: DS_MD_SUP_PRCHSNG_ORG
-    description: ''
-    author: lsorarra@its.jnj.com
-    createdAt: '2023-04-04 16:05:45'
-    modifiedAt: '2023-04-04 16:05:45'
-    mode: batch
-    physicalDatasets:
-      CDL_L1_Dev:
-        fabricId: 32
-        datasetType: Database
-        description: ''
-        author: lsorarra@its.jnj.com
-        createdAt: '2023-04-04 16:05:45'
-        modifiedAt: '2023-04-04 16:05:45'
   datasets/MD_SUP_PRCHSNG_ORG:
     name: MD_SUP_PRCHSNG_ORG
     description: ''
     author: lsorarra@its.jnj.com
     createdAt: '2023-04-04 18:58:38'
-    modifiedAt: '2023-04-04 21:43:22'
+    modifiedAt: '2023-04-05 14:36:12'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
