--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,76 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_EMP_1:
+                name: PPLN_MES_MD_EMP_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_EMP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_EMP_2:
+                name: PPLN_MES_MD_EMP_2_cmw_mdy_mei_mer_mej_mes
+                description: Mapping pipeline  ['cmw', 'mdy', 'mei', 'mer', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_EMP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_EMP_3:
+                name: PPLN_MES_MD_EMP_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_EMP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_EMP_4:
+                name: PPLN_MES_MD_EMP_4_meb_mns
+                description: Mapping pipeline  ['meb', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_EMP
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_EMP_5:
+                name: PPLN_MES_MD_EMP_5_mem_mmt
+                description: Mapping pipeline  ['mem', 'mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_EMP
+                dependencies: {}
+  
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
