--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,34 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_ESIGN_HIST_SUM_1:
+                name: PPLN_MES_MD_ESIGN_HIST_SUM_1_mec_meb_mem_mmt_mns
+                description: Mapping pipeline  ['mec', 'meb', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_ESIGN_HIST_SUM
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_ESIGN_HIST_SUM_2:
+                name: PPLN_MES_MD_ESIGN_HIST_SUM_2_cmw_mdy_mei_mer_mej_mes
+                description: Mapping pipeline  ['cmw', 'mdy', 'mei', 'mer', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_ESIGN_HIST_SUM
+                dependencies: {}
+    
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
