--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,34 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_HIST_XREF_1:
+                name: PPLN_MES_MD_HIST_XREF_1_mec_meb_mdy_mei_mer_mej_mes_mem_mmt_mns
+                description: Mapping pipeline  ['mec', 'meb', 'mdy', 'mei', 'mer', 'mej', 'mes', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_XREF
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_HIST_XREF_2:
+                name: PPLN_MES_MD_HIST_XREF_2_cmw_mvc
+                description: Mapping pipeline  ['cmw', 'mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_XREF
+                dependencies: {}
+  
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
