--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,63 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+          
+  pipelines/PPLN_MES_MD_MFG_ORDR_STS_1:
+                name: PPLN_MES_MD_MFG_ORDR_STS_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR_STS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_STS_2:
+                name: PPLN_MES_MD_MFG_ORDR_STS_2_cmw_mdy_mer
+                description: Mapping pipeline  ['cmw', 'mdy', 'mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR_STS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_STS_3:
+                name: PPLN_MES_MD_MFG_ORDR_STS_3_mei_mej_mes
+                description: Mapping pipeline  ['mei', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR_STS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_STS_4:
+                name: PPLN_MES_MD_MFG_ORDR_STS_4_mem_mns
+                description: Mapping pipeline  ['mem', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR_STS
+                dependencies: {}
+   
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
